welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: c is already defined as value c
def faireLigne(c: color1, c: color2) {
                          ^FlowerPot:11: error: not found: type color1
def faireLigne(c: color1, c: color2) {
                  ^FlowerPot:11: error: not found: type color2
def faireLigne(c: color1, c: color2) {
                             ^